CAUSEWAY-3989: forwardport of replay managers v2->v4